--- a/Landing Page/kronos_landing_page.css
+++ b/Landing Page/kronos_landing_page.css
@@ -14,3 +14,26 @@
 /* body{
     background-color: tomato;
 } */
+
+.share {
+    font-size: large;
+    text-align: center;
+    font-family: Arbutus;
+    background-color: #F7F7F7;
+}
+
+.btn {
+    margin: 7px;
+    border: none;
+    border-radius: 100px;
+    background-color: white;
+}
+
+.footer {
+    background-color: #212121;
+    color: white;
+}
+
+.links {
+    text-align: center;
+}
