--- a/Customizations Page/kronos_Customizations_page.css
+++ b/Customizations Page/kronos_Customizations_page.css
@@ -26,7 +26,7 @@
     margin: 7px;
     border: none;
     border-radius: 100px;
-    background-color: white;
+    /* background-color: white; */
 }
 
 .footer {
