--- a/Watches Page/kronos_watches_page.css
+++ b/Watches Page/kronos_watches_page.css
@@ -38,3 +38,13 @@
     text-align: center;
 }
 
+h2{
+    margin: 60px;
+    font-family: sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    background: -webkit-radial-gradient(black,rgba(202, 202, 202, 0.651));
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+}
