--- a/Watches Page/kronos_watches_page.css
+++ b/Watches Page/kronos_watches_page.css
@@ -1,9 +1,16 @@
 .navbar{
     background-color: transparent;
+    z-index: 9;
 }
 .navbar:hover{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.582);
 
+}
+.brand{
+    position: absolute;
+    left: 50%;
+    margin-left: -50px !important;  
+    display: block;
 }
 .btn1:hover{
     color: blueviolet;
@@ -11,10 +18,54 @@
 .bg1{
     background-color: transparent;
 }
-/* body{
-    background-color: tomato;
-} */
-
+#myVideo {
+    top: 0;
+    position: absolute;
+    width: 100%;
+  }
+.smort{
+    margin-top: 50rem;
+}
+@media screen and (max-width:1500px) {
+    .smort{
+    margin-top: 48rem;
+    }
+}
+@media screen and (max-width:1360px) {
+    .smort{
+    margin-top: 42rem;
+    }
+}
+@media screen and (max-width:1200px) {
+    .smort{
+    margin-top: 37rem;
+    }
+}
+@media screen and (max-width:1100px) {
+    .smort{
+    margin-top: 32rem;
+    }
+}
+@media screen and (max-width:1000px) {
+    .smort{
+    margin-top: 30rem;
+    }
+}
+@media screen and (max-width:800px) {
+    .smort{
+    margin-top: 25rem;
+    }
+}
+@media screen and (max-width:600px) {
+    .smort{
+    margin-top: 15rem;
+    }
+}
+@media screen and (max-width:400px) {
+    .smort{
+    margin-top: 10rem;
+    }
+}
 .share {
     font-size: large;
     text-align: center;
