--- a/Customizations Page/kronos_Customizations_page.css
+++ b/Customizations Page/kronos_Customizations_page.css
@@ -1,9 +1,20 @@
 .navbar{
     background-color: transparent;
+    z-index: 9;
 }
 .navbar:hover{
-    background-color: white;
-
+    background-color: rgba(255, 255, 255, 0.582);
+}
+.brand{
+    position: absolute;
+    left: 50%;
+    margin-left: -50px !important;  
+    display: block;
+}
+#carouselExampleCaptions{
+    position:absolute;
+  width:100%;
+  top:0;
 }
 .btn1:hover{
     color: blueviolet;
@@ -11,10 +22,50 @@
 .bg1{
     background-color: transparent;
 }
-/* body{
-    background-color: tomato;
-} */
+#custom{
+    margin-top: 50rem;
 
+}
+@media screen and (max-width:1500px) {
+    #custom{
+    margin-top: 45rem;
+    }
+}
+@media screen and (max-width:1300px) {
+    #custom{
+    margin-top: 40rem;
+    }
+}
+@media screen and (max-width:1200px) {
+    #custom{
+    margin-top: 35rem;
+    }
+}
+@media screen and (max-width:1100px) {
+    #custom{
+    margin-top: 32rem;
+    }
+}
+@media screen and (max-width:1000px) {
+    #custom{
+    margin-top: 30rem;
+    }
+}
+@media screen and (max-width:800px) {
+    #custom{
+    margin-top: 25rem;
+    }
+}
+@media screen and (max-width:600px) {
+    #custom{
+    margin-top: 20rem;
+    }
+}
+@media screen and (max-width:400px) {
+    #custom{
+    margin-top: 10rem;
+    }
+}
 .share {
     font-size: large;
     text-align: center;
