--- a/Watches Page/kronos_watches_page.css
+++ b/Watches Page/kronos_watches_page.css
@@ -23,6 +23,12 @@
     position: absolute;
     width: 100%;
   }
+.card{
+    transition:transform .2s;
+}
+.card:hover{
+    transform: scale(1.1);
+}
 .smort{
     margin-top: 50rem;
 }
