--- a/Landing Page/kronos_landing_page.css
+++ b/Landing Page/kronos_landing_page.css
@@ -77,7 +77,7 @@
     margin: 7px;
     border: none;
     border-radius: 100px;
-    background-color: white;
+    background-color:rgba(240, 182, 106, 0.911) ;
 }
 
 .footer {
